samples/_failures_safe/1761394097_6141b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a592b3b.c: In function ‘main’:
./samples/SAFE/__tmp_1a592b3b.c:165:9: error: expected declaration or statement at end of input
  165 |         input[len - 1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_1a592b3b.c:165:9: error: expected declaration or statement at end of input
